[WARP-SPEED] 1. demote refactor 2. demote stats fixed 3. cache-mgr demote test
(cherry picked from commit c59770f20b64ea793b1816d1026ff2723a09dff7)